[gd_scene load_steps=32 format=3 uid="uid://c60dovlbpwlby"]

[ext_resource type="Script" path="res://UserInterface/hud.gd" id="1_jm052"]
[ext_resource type="PackedScene" uid="uid://cmblqe6t82d2w" path="res://UserInterface/Cherry.tscn" id="1_w4ght"]
[ext_resource type="Texture2D" uid="uid://cupiyhojg6mrw" path="res://assets/Sprites/Characters/gem/gem-1.png" id="2_3d0s5"]
[ext_resource type="FontFile" uid="uid://cwvpdf5fo011y" path="res://assets/Others/Kenney Bold.ttf" id="3_aqb1h"]
[ext_resource type="Texture2D" uid="uid://pu6yyt0uru0h" path="res://assets/GUI/UiCozyFree.png" id="5_fokt6"]
[ext_resource type="Texture2D" uid="uid://r78bvyapvcy4" path="res://assets/GUI/bg.png" id="6_c6s5b"]
[ext_resource type="Texture2D" uid="uid://cvn4xuof6ooi7" path="res://assets/GUI/Window.png" id="7_njtue"]
[ext_resource type="Texture2D" uid="uid://c0e7833eutjyh" path="res://assets/GUI/Button.png" id="8_clr8c"]
[ext_resource type="PackedScene" uid="uid://dinpppgyybxc5" path="res://UserInterface/fader.tscn" id="9_dj7u6"]
[ext_resource type="Script" path="res://FileManager.gd" id="10_1rtow"]

[sub_resource type="LabelSettings" id="LabelSettings_pelfa"]
font = ExtResource("3_aqb1h")
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_67iy6"]
atlas = ExtResource("5_fokt6")
region = Rect2(97, 97, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_kspms"]
atlas = ExtResource("5_fokt6")
region = Rect2(113, 98, 14, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_px3x2"]
atlas = ExtResource("5_fokt6")
region = Rect2(8, 167, 87, 81)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsqhp"]
atlas = ExtResource("5_fokt6")
region = Rect2(65, 129, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_22fqh"]
atlas = ExtResource("5_fokt6")
region = Rect2(81, 130, 14, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i7a7"]
atlas = ExtResource("5_fokt6")
region = Rect2(65, 113, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkj46"]
atlas = ExtResource("5_fokt6")
region = Rect2(81, 114, 14, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_lysb0"]
atlas = ExtResource("5_fokt6")
region = Rect2(65, 97, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7y0m"]
atlas = ExtResource("5_fokt6")
region = Rect2(81, 98, 14, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_snenv"]
atlas = ExtResource("5_fokt6")
region = Rect2(8, 167, 87, 81)

[sub_resource type="AtlasTexture" id="AtlasTexture_nevwn"]
atlas = ExtResource("7_njtue")
region = Rect2(3619, 3893, 309, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5vlo"]
atlas = ExtResource("8_clr8c")
region = Rect2(1142, 972, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2rh5"]
atlas = ExtResource("8_clr8c")
region = Rect2(1551, 972, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb3gi"]
atlas = ExtResource("8_clr8c")
region = Rect2(1346, 972, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwd2x"]
atlas = ExtResource("8_clr8c")
region = Rect2(1142, 2280, 181, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6qsq"]
atlas = ExtResource("8_clr8c")
region = Rect2(1551, 2280, 181, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg7p8"]
atlas = ExtResource("8_clr8c")
region = Rect2(1346, 2280, 181, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_tunt3"]
atlas = ExtResource("8_clr8c")
region = Rect2(197, 972, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_us1ei"]
atlas = ExtResource("8_clr8c")
region = Rect2(606, 972, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_eiekb"]
atlas = ExtResource("8_clr8c")
region = Rect2(401, 972, 181, 190)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jm052")

[node name="HealthCoinContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -310.0
offset_top = 24.0
offset_right = -32.0
offset_bottom = 178.0
grow_horizontal = 0

[node name="HealthBoxContainer" type="HBoxContainer" parent="HealthCoinContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
alignment = 2

[node name="Cherry" parent="HealthCoinContainer/HealthBoxContainer" instance=ExtResource("1_w4ght")]
layout_mode = 2

[node name="Cherry2" parent="HealthCoinContainer/HealthBoxContainer" instance=ExtResource("1_w4ght")]
layout_mode = 2

[node name="Cherry3" parent="HealthCoinContainer/HealthBoxContainer" instance=ExtResource("1_w4ght")]
layout_mode = 2

[node name="CoinContainer" type="HBoxContainer" parent="HealthCoinContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="TextureRect" type="TextureRect" parent="HealthCoinContainer/CoinContainer"]
layout_mode = 2
texture = ExtResource("2_3d0s5")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="HealthCoinContainer/CoinContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_pelfa")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 24.0
offset_right = 145.0
offset_bottom = 139.0
texture_normal = SubResource("AtlasTexture_67iy6")
texture_pressed = SubResource("AtlasTexture_kspms")
ignore_texture_size = true
stretch_mode = 5

[node name="PauseScreen" type="ColorRect" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="TextureRect" type="TextureRect" parent="PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -317.5
offset_top = -295.5
offset_right = 317.5
offset_bottom = 295.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_px3x2")

[node name="Label" type="Label" parent="PauseScreen/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.326
anchor_top = 0.02
anchor_right = 0.676
anchor_bottom = 0.12
offset_left = -0.0100098
offset_top = 0.179999
offset_right = -0.26004
offset_bottom = 0.0799942
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.909804, 0.831373, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0.388235, 0.258824, 0.262745, 1)
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("3_aqb1h")
theme_override_font_sizes/font_size = 24
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PauseScreen/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.109
anchor_top = 0.431
anchor_right = 0.896
anchor_bottom = 0.645
offset_left = -4.715
offset_top = -14.221
offset_right = -4.46002
offset_bottom = -14.695
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="ExitButton" type="TextureButton" parent="PauseScreen/TextureRect/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_bsqhp")
texture_pressed = SubResource("AtlasTexture_22fqh")
stretch_mode = 5

[node name="RestartButton" type="TextureButton" parent="PauseScreen/TextureRect/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_3i7a7")
texture_pressed = SubResource("AtlasTexture_tkj46")
stretch_mode = 5

[node name="ResumeButton" type="TextureButton" parent="PauseScreen/TextureRect/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_lysb0")
texture_pressed = SubResource("AtlasTexture_a7y0m")
stretch_mode = 5

[node name="LevelComplete" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_c6s5b")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="LevelComplete"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.316
anchor_top = 0.2
anchor_right = 0.684
anchor_bottom = 0.8
offset_left = 0.467987
offset_top = -0.100006
offset_right = -0.468018
offset_bottom = 0.0999756
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_snenv")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="LevelComplete/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.329
anchor_top = 0.023
anchor_right = 0.678
anchor_bottom = 0.116
offset_left = -0.167007
offset_top = 0.0529995
offset_right = 0.205994
offset_bottom = -0.124001
theme_override_colors/font_color = Color(0.909804, 0.831373, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0.388235, 0.258824, 0.262745, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_aqb1h")
theme_override_font_sizes/font_size = 11
text = "LEVEL COMPLETE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoneyTexture" type="TextureRect" parent="LevelComplete/TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -155.0
offset_top = 70.5
offset_right = 154.0
offset_bottom = 181.5
grow_horizontal = 2
texture = SubResource("AtlasTexture_nevwn")

[node name="MoneyLabel" type="Label" parent="LevelComplete/TextureRect/MoneyTexture"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.283
anchor_top = 0.266
anchor_right = 0.917
anchor_bottom = 0.662
offset_left = 0.0529938
offset_top = -0.026001
offset_right = 0.146973
offset_bottom = 0.0179901
theme_override_colors/font_outline_color = Color(0.47451, 0.298039, 0.298039, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("3_aqb1h")
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="LevelComplete/TextureRect"]
layout_mode = 0
offset_left = 67.0
offset_top = 223.0
offset_right = 366.0
offset_bottom = 308.0

[node name="HomeButton" type="TextureButton" parent="LevelComplete/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = SubResource("AtlasTexture_f5vlo")
texture_pressed = SubResource("AtlasTexture_b2rh5")
texture_hover = SubResource("AtlasTexture_vb3gi")
ignore_texture_size = true
stretch_mode = 5

[node name="LevelSelectButton" type="TextureButton" parent="LevelComplete/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = SubResource("AtlasTexture_iwd2x")
texture_pressed = SubResource("AtlasTexture_h6qsq")
texture_hover = SubResource("AtlasTexture_rg7p8")
ignore_texture_size = true
stretch_mode = 5

[node name="NextLevelButton" type="TextureButton" parent="LevelComplete/TextureRect/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture_normal = SubResource("AtlasTexture_tunt3")
texture_pressed = SubResource("AtlasTexture_us1ei")
texture_hover = SubResource("AtlasTexture_eiekb")
ignore_texture_size = true
stretch_mode = 5

[node name="fader" parent="." instance=ExtResource("9_dj7u6")]
unique_name_in_owner = true
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="FileManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("10_1rtow")

[connection signal="button_down" from="PauseButton" to="." method="pause_game"]
[connection signal="button_down" from="PauseScreen/TextureRect/GridContainer/RestartButton" to="." method="restart_game"]
[connection signal="button_down" from="PauseScreen/TextureRect/GridContainer/ResumeButton" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="LevelComplete/TextureRect/HBoxContainer/HomeButton" to="." method="goto_home"]
[connection signal="button_down" from="LevelComplete/TextureRect/HBoxContainer/LevelSelectButton" to="." method="goto_level_select"]
[connection signal="button_down" from="LevelComplete/TextureRect/HBoxContainer/NextLevelButton" to="." method="goto_next_level"]
